<resources>
    <string name="app_name">Donor System</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Donor App</string>
    <string name="nav_header_subtitle">SES1A Group 2</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>
    <string name="user_info">User Information</string>
    <string name="view_booking">View Bookings</string>
    <string name="make_booking">Make Booking</string>
    <string name="search">Search</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Activity titles -->
    <string name="login_activity_title">Log In</string>
    <string name="register_activity_title">Register User</string>

    <!-- Login Activity Text -->
    <string name="email_txt">Email:</string>
    <string name="email_example_com">Example@email.com</string>
    <string name="password_txt">Password:</string>
    <string name="log_in_txt">Log In</string>
    <string name="register">New user register here</string>
    <string name="reset_pwd">Reset Password</string>

    <!-- Register Activity Text -->
    <string name="register_name_txt">Name</string>
    <string name="register_email_txt">Email</string>
    <string name="register_donor_txt">Donor</string>
    <string name="register_charity_txt">Charity</string>
    <string name="select_type">Select User Type:</string>
    <string name="register_password_txt">Password</string>
    <string name="register_password_confirm_txt">Confirm password</string>
    <string name="confirm_txt">Register</string>

    <string-array name="categories">
        <item>Animals</item>
        <item>Arts,Culture,Humanities</item>
        <item>Education</item>
        <item>Health</item>
        <item>Human &amp; Civil Rights</item>
        <item>Human Services</item>
        <item>Religion</item>
        <item>Research &amp; Public Policy</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!--User information -->
    <string name="group_txt">Group:</string>
    <string name="phone_txt">Phone Number:</string>
    <string name="address_txt">Address:</string>
</resources>
