<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.UserInformationFragment">

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:text="@string/register_name_txt" />

    <TextView
        android:id="@+id/group_tv"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_tv"
        android:layout_marginTop="20dp"
        android:text="@string/group_txt" />

    <TextView
        android:id="@+id/email_tv"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group_tv"
        android:layout_marginTop="20dp"
        android:text="@string/email_txt" />

    <TextView
        android:id="@+id/phone_tv"
        android:layout_width="123dp"
        android:layout_height="30dp"
        android:layout_below="@+id/email_tv"
        android:layout_marginTop="20dp"
        android:text="@string/phone_txt" />

    <TextView
        android:id="@+id/address_tv"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_tv"
        android:layout_marginTop="20dp"
        android:text="@string/address_txt" />

</RelativeLayout>