<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.LoginActivity"
    tools:showIn="@layout/activity_login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/emailTV"
            style="@style/LoginStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:labelFor="@id/emailET"
            android:text="@string/email_txt" />

        <EditText
            android:id="@+id/emailET"
            style="@style/LoginStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/emailTV"
            android:hint="@string/email_example_com"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/passwordTV"
            style="@style/LoginStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/emailTV"
            android:layout_marginTop="20dp"
            android:labelFor="@+id/passwordET"
            android:text="@string/password_txt" />

        <EditText
            android:id="@id/passwordET"
            style="@style/LoginStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/emailET"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/passwordTV"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/register_btn"
            style="@style/LoginStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/passwordET"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textFontWeight="8"
            android:text="@string/register"/>

        <Button
            android:id="@+id/login_btn"
            style="@style/LoginStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:text="@string/log_in_txt" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>